--- a/aspnet-core/src/Acme.BookStore.DbMigrator/appsettings.json
+++ b/aspnet-core/src/Acme.BookStore.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default":"Data Source=SQL8002.site4now.net;Initial Catalog=db_a87e9d_kennlogin;User Id=db_a87e9d_kennlogin_admin;Password=AntA@123"
+    "Default": "Data Source=SQL5105.site4now.net;Initial Catalog=db_a88494_yancysaac;User Id=db_a88494_yancysaac_admin;Password=yancy1234"
   },
   "IdentityServer": {
     "Clients": {
@@ -12,7 +12,7 @@
       "BookStore_App": {
         "ClientId": "BookStore_App",
         "ClientSecret": "1q2w3e*",
-        "RootUrl": "https://stunning-beignet-b07c62.netlify.app"
+        "RootUrl": "https://tourmaline-squirrel-a6ec21.netlify.app"
       },
       "BookStore_BlazorServerTiered": {
         "ClientId": "BookStore_BlazorServerTiered",
@@ -22,7 +22,7 @@
       "BookStore_Swagger": {
         "ClientId": "BookStore_Swagger",
         "ClientSecret": "1q2w3e*",
-        "RootUrl": "http://khalidanta-001-site1.dtempurl.com"
+        "RootUrl": "http://yancykun-001-site1.itempurl.com"
       }
     }
   }
