--- a/aspnet-core/src/Acme.BookStore.HttpApi.Host/appsettings.json
+++ b/aspnet-core/src/Acme.BookStore.HttpApi.Host/appsettings.json
@@ -1,15 +1,15 @@
 {
   "App": {
-    "SelfUrl": "http://khalidanta-001-site1.dtempurl.com",
-    "ClientUrl": "https://stunning-beignet-b07c62.netlify.app",
-    "CorsOrigins": "https://*.BookStore.com,https://stunning-beignet-b07c62.netlify.app",
-    "RedirectAllowedUrls": "https://stunning-beignet-b07c62.netlify.app,https://localhost:44307"
+    "SelfUrl": "http://yancykun-001-site1.itempurl.com",
+    "ClientUrl": "https://tourmaline-squirrel-a6ec21.netlify.app",
+    "CorsOrigins": "https://*.BookStore.com,https://tourmaline-squirrel-a6ec21.netlify.app",
+    "RedirectAllowedUrls": "https://tourmaline-squirrel-a6ec21.netlify.app,https://localhost:44307"
   },
   "ConnectionStrings": {
-    "Default":"Data Source=SQL8002.site4now.net;Initial Catalog=db_a87e9d_kennlogin;User Id=db_a87e9d_kennlogin_admin;Password=AntA@123"
+    "Default": "Data Source=SQL5105.site4now.net;Initial Catalog=db_a88494_yancysaac;User Id=db_a88494_yancysaac_admin;Password=yancy1234"
   },
   "AuthServer": {
-    "Authority": "http://khalidanta-001-site1.dtempurl.com",
+    "Authority": "http://yancykun-001-site1.itempurl.com",
     "RequireHttpsMetadata": "false",
     "SwaggerClientId": "BookStore_Swagger",
     "SwaggerClientSecret": "1q2w3e*"
